tests/ui/errors/auto-impl.pattern.tuple.stderr
error: `auto_impl` supports only ident of wildcard arguments
 --> tests/ui/errors/auto-impl.pattern.tuple.rs:3:13
  |
3 |     fn test((a, b): (i32, char)) {
  |             ^^^^^^
